k8s/backend-deployment-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lab4
spec:
  selector:
    matchLabels:
      app: backend-lab4
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-lab4
    spec:
      containers:
      - name: lab4-backend
        image: shlomobarzili/lab4-backend:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5050
          protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
