k8s/fronted-deployment-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-front
  namespace: lab4
spec:
  selector:
    matchLabels:
      app: react-app
  replicas: 1
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: lab4
        image: shlomobarzili/lab4-react-pronted:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 200m
            memory: 1Gi
