k8s/backend-deployment&svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lab4
spec:
  selector:
    matchLabels:
      app: backend-lab4
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-lab4
    spec:
      containers:
      - name: lab4-backend
        image: shlomobarzili/lab4-backend:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5050
          protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: lab4-backend-svc
  namespace: lab4 # the namespace that sperate the pods between envroments.
spec:
  selector:
    app: backend-lab4
  type: ClusterIP # the type of the service
  ports:
    - protocol: TCP
      port: 5050   # the port svc that expose
      targetPort: 5050 # the port of the pod | container
