k8s/backend.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: lab4-backend-svc
  namespace: lab4 # the namespace that sperate the pods between envroments.
spec:
  selector:
    app: backend-lab4
  type: ClusterIP # the type of the service
  ports:
    - protocol: TCP
      port: 5050   # the port svc that expose
      targetPort: 5050 # the port of the pod | container
#      nodePort: 30056
