k8s/db-deploment&svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: React-Shop
  labels:
    app: mongodb-lab4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-lab4
  template:
    metadata:
      labels:
        app: mongodb-lab4
    spec:
      containers:
      - name: mongodb
        image: shlomobarzili/lab4-mongo:latest
        ports:
        - containerPort: 27017

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: lab4
spec:
  selector:
    app: mongodb-lab4
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
