k8s/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: lab4
spec:
  selector:
    app: mongodb-lab4
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
