k8s/fronted-deployment&svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-front
  namespace: react-shop
spec:
  selector:
    matchLabels:
      app: react-app
  replicas: 1
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: lab4
        image: shlomobarzili/lab4-react-pronted:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 200m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: react-svc
  namespace: lab4 # the namespace that sperate the pods between envroments.
spec:
  selector:
    app: react-app
  type: ClusterIP # the type of the service
  ports:
    - protocol: TCP
      port: 3000   # the port svc that expose
      targetPort: 3000 # the port of the pod
