k8s/fronted-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fronted-ingress
  namespace: lab4 # the namespace that separates the pods between environments.
  annotations:
    kubernetes.io/ingress.class: alb # the type alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # the alb move the traffic directly to pods
    alb.ingress.kubernetes.io/security-groups: sg-011ca41f253701b5f
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:148088962203:certificate/14974cc3-8eb5-4fb7-af19-c5e4aeb5305a
    alb.ingress.kubernetes.io/subnets: subnet-09672c6cc819efd39,subnet-0c40539995bbdbfff # Public subnetbs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 3000}]' # listen ports
    alb.ingress.kubernetes.io/actions.ssl-redirect: > # redirect to https
      {"type": "redirect", "redirectConfig": { "protocol": "HTTPS", "port": "443", "statusCode": "HTTP_301"}}
   # alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:148088962203:regional/webacl/blackjack-waf/6583d044-16e4-4b0c-99fb-20864ea5b1f8

spec:
  ingressClassName: alb
  rules:
    - host: fronted-cd.spider-shlomo.com
      http:
        paths:
          - path: /
            pathType: Prefix # allow only access to application
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation

          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-svc
                port:
                  number: 3000
